EN-11419 Fix color contrast ratios (#3732)

--- a/app/styles/odysseus-base.scss
+++ b/app/styles/odysseus-base.scss
@@ -1286,7 +1286,7 @@ b {
           padding: 1em;
         }
         .count {
-          color: #999;
+          color: #5e5e5e;
           font-size: 3.5em;
           letter-spacing: -1px;
           white-space: nowrap;
@@ -1881,7 +1881,7 @@ b {
   }
   .dashboardEditHeader {
     border-bottom: 1px solid #777;
-    color: #777;
+    color: #5e5e5e;
     font-size: 1.6em;
     font-weight: normal;
     margin-bottom: 0.7em;
