--- a/app/styles/screen-govstat-base.scss
+++ b/app/styles/screen-govstat-base.scss
@@ -102,7 +102,7 @@ input.secondary-button, a.secondary-button {
 
 a.expander {
   border: none;
-  color: #999;
+  color: #5e5e5e;
   cursor: pointer;
   display: block;
   font-family: $govstat_font_family;
